--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,11 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:14
     steps:
-      - run: 
-        name: The First Step
-        command: |
-          echo "Hello, CircleCI!"
+      - checkout
+      - run:
+          name: The First Step
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
