--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,11 @@
 version: 2.1
+
 jobs:
   build:
     docker:
-      - image: circleci/node:14
+      - image: node:20.4.0
     steps:
       - checkout
       - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+          name: Install Dependencies
+          command: npm install --force
